Updates STOMP implementation

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -48,6 +48,19 @@
             </table>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <table id="conversation" class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Hystrix</th>
+                </tr>
+                </thead>
+                <tbody id="hystrix">
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 </body>
 </html>
