Clean Up codebase

--- a/src/main/resources/static/hystrix.ws/index.html
+++ b/src/main/resources/static/hystrix.ws/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Jiameng Hystrix Dashboard</title>
+<title>Hystrix Dashboard</title>
 
 	<!-- Javascript to monitor and display -->
 	<script src="/webjars/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
